Change - Styling: Updated the styling of all pages by making it more reponsive by using clamp(). Now, bigger font-size will be displayed on smaller screens to eliminate the need for zooming. Cleaned some styling by avoiding repetitiveness in elemens like h2, h3, p font sizes, instead move them to main.css and let it apply to all pages.

--- a/main.css
+++ b/main.css
@@ -7,9 +7,9 @@
 :root {
     --border: 2px solid black;
     --border-radius: 2rem;
-    --p-font-size: 1.25rem;
-    --h2-font-size: 3rem;
-    --h3-font-size: 1.5rem;
+    --p-font-size: clamp(1.25rem, calc(3rem - 1.5dvw), 3rem);
+    --h2-font-size: clamp(3rem, calc(5rem - 1.5dvw), 5rem);
+    --h3-font-size: clamp(2rem, calc(4rem - 1.5dvw), 4rem);
     --bg-color: #ffffff;
     --text-color: #000000;
     --text-font: Arial;
@@ -37,25 +37,55 @@ body {
     background-color: var(--bg-color);
     color: var(--text-color);
     font-family: var(--text-font, Arial);
+    text-align: center;
+
+    h2 {
+        font-size: var(--h2-font-size);
+    }
+
+    h3 {
+        font-size: var(--h3-font-size);
+    }
+
+    p {
+        font-size: var(--p-font-size);
+    }
+
+    button {
+        border: var(--border);
+        border-radius: var(--border-radius);
+        background-color: var(--bg-color);
+        color: var(--text-color);
+        font-size: var(--p-font-size);
+        font-family: var(--text-font);
+        margin: 1rem 0;
+        padding: 1rem;
+        cursor: pointer;
+        align-self: center;
+    }
+
+
 
     header {
         position: fixed;
         display: flex;
         justify-content: space-between;
-        padding: 2rem;
+        padding: 1rem;
         background-color: var(--bg-color);
         width: 100%;
+        align-items: center;
+
+        h1 {
+            font-size: clamp(2rem, calc(3rem - 1dvw), 3rem);
+        }
 
         button {
             padding: 0.5rem 0.5rem;
-            font-size: 1rem;
-            cursor: pointer;
-            border-radius: 10px;
         }
 
         form {
             position: fixed;
-            top: 25%;
+            top: 15rem;
             left: 50%;
             transform: translate(-85%, -50%);
             display: flex;
@@ -63,8 +93,22 @@ body {
             background: var(--bg-color);
             border: var(--border);
             border-radius: var(--border-radius);
-            padding: 1rem;
+            padding: 0 2rem;
             gap: 0.5rem;
+            font-size: var(--p-font-size);
+            text-align: start;
+
+            button {
+                width: 100%;
+            }
+
+            select {
+                font-size: var(--p-font-size);
+
+                option {
+                    font-size: 1.25rem;
+                }
+            }
         }
 
         .hidden {
@@ -83,11 +127,12 @@ body {
                 align-items: center;
                 justify-content: center;
                 text-align: center;
+                flex-wrap: wrap;
             }
 
             ul a {
                 padding: 1rem;
-                font-size: 1.25rem;
+                font-size: clamp(1.5rem, calc(2rem - 1dvw), 2rem);
                 color: var(--text-color);
                 text-decoration: none;
             }
